Fix invisible-but-clickable button
Forgot about padding contributing to height.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -506,9 +506,11 @@ figure.chart {
 
 button[name=scroll][value=top] {
   height: 30px;
+  padding:10px;
   opacity: 1;
-  overflow: hidden;
 
+
+  overflow: hidden;
   position: fixed;
   bottom:0px;
   right:0px;
@@ -516,7 +518,6 @@ button[name=scroll][value=top] {
   border:0px;
   background-color: #245485;
   color:white;
-  padding:10px;
   border-radius: 7px 7px 0px 0px;
   box-shadow: rgba(127, 127, 127, 0.7) 0px 0px 20px;
   cursor: pointer;
@@ -531,6 +532,10 @@ button[name=scroll][value=top]:active {
 
 button[name=scroll][value=top]:disabled {
   height: 0px;
+  padding: 0px;
   opacity: 0;
-  transition: height 0s linear 0.25s, opacity 0.15s;
+
+  transition: height 0s linear 0.25s,
+              padding 0s linear 0.25s,
+              opacity 0.15s;
 }
